adding styles for home/cover

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>ReyBal Simple jQuery SPA</title>
 </head>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="./css/angel.css">
+<link rel="stylesheet" href="./css/gelvin.css">
 <body>
 
     <nav>
