fixing and adding somethingy

--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>ReyBal Simple jQuery SPA</title>
-</head>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="./css/angel.css">
 <link rel="stylesheet" href="./css/gelvin.css">
+</head>
 <body>
 
     <nav>
         <div class="w3-bar w3-light-yellow">
             <a href="#home" class="w3-bar-item w3-button">Home</a>
             <a href="#about" class="w3-bar-item w3-button">About</a>
-            <a href="#hobbies" class="w3-bar-item w3-button">Hobbies</a>
+            <a href="#likes" class="w3-bar-item w3-button">Likes</a>
         </div>
     </nav>
 
         <div id="content"></div>
-    
+    </body>
+        <script src="./js/app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/router.js"></script>
     
-</body>
+
 </html>
