--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 </div>
     </body>
 
-
+    <script src="https:/cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="./js/router.js"></script>
     
 
 </html>
