add js typingeffect

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>ReyBal Simple jQuery SPA</title>
+    <title>Ballaso Simple jQuery SPA</title>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="./css/angel.css">
 <link rel="stylesheet" href="./css/gelvin.css">
@@ -28,7 +28,7 @@
 <div class="wrapper">
     <div class="cols cols0">
         <span class="topline">Hello</span>
-        <h1>I'm <span class="multiText">Coder</span></h1>
+        <h1>I'm <span class="multiText"></span></h1>
         <a>To: IT24C Event Driven Programming</a><br>
         <a>From: Angel Justine Ballaso </a>
         
