--- a/index.html
+++ b/index.html
@@ -1,49 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <title>Ballaso Simple jQuery SPA</title>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="./css/angel.css">
-<link rel="stylesheet" href="./css/gelvin.css">
+    <title>Ballaso SPA-jQuery</title>
+    <link rel="stylesheet" href="./css/anseph.css">
 </head>
 <body>
-
-  
-        <div class="container">
-            <nav>
+   
+    <div class="container">
+        <nav>
             <div class="logo">AnSeph<b>.</b></div>
             <ul class="navItems">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Skills</a></li>
-        </ul>
-    </nav>
-</div>
-<div class="wrapper">
-    <div class="cols cols0">
-        <span class="topline">Hello</span>
-        <h1>I'm <span class="multiText"></span></h1>
+            </ul>
+        </nav>
+    </div>
+    <div class="wrapper">
+        <section class="cols cols0">
+        <span class="topline">Hello</span>    
+        <h1>I'm  <span class="multiText">coder</span></h1>
         <a>To: IT24C Event Driven Programming</a><br>
-        <a>From: Angel Justine Ballaso </a>
-        
+        <a>From: Angel Justine Ballaso</a>
+        </section>
     </div>
-</div>
-<div class="cols cols1">
-    <div class="imgbox">
-        <img src="https://www.pngkey.com/png/full/0-4144_paper-watercolor-painting-ink.png" id="splash">
-        <img src="img/metoo.png" id="me">
+    <div class="cols cols1">
+        <div class="imgbox">
+            <img src="https://www.pngkey.com/png/full/0-4144_paper-watercolor-painting-ink.png" id="splash">
+            <img src="img/metoo.png" id="me">
+        </div>
     </div>
-</div>
-    </body>
-
-    <script src="https:/cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="./js/router.js"></script>
-    
-
+</body>
+<script src="https:/cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script src="./js/router.js"></script>
 </html>
